@@ -19,6 +19,8 @@ import com.powsybl.contingency.ContingencyContext;
 import com.powsybl.iidm.network.PhaseTapChanger;
 import com.powsybl.iidm.network.ThreeWindingsTransformer;
 import com.powsybl.security.action.*;
+import com.powsybl.security.condition.AllViolationCondition;
+import com.powsybl.security.condition.AnyViolationCondition;
 import com.powsybl.security.condition.TrueCondition;
 import com.powsybl.security.strategy.OperatorStrategy;
 import com.powsybl.security.strategy.OperatorStrategyList;
@@ -31,6 +33,7 @@ import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static com.powsybl.security.LimitViolationType.*;
 
 /**
  * @author Etienne Lesot <etienne.lesot@rte-france.com>
@@ -90,8 +93,23 @@ class JsonActionAndOperatorStrategyTest extends AbstractConverterTest {
     @Test
     void operatorStrategyRoundTrip() throws IOException {
         List<OperatorStrategy> operatorStrategies = new ArrayList<>();
-        operatorStrategies.add(new OperatorStrategy("id1", ContingencyContext.specificContingency("contingencyId1"), new TrueCondition(), Arrays.asList("actionId1", "actionId2", "actionId3")));
-        operatorStrategies.add(new OperatorStrategy("id1", ContingencyContext.specificContingency("contingencyId1"), new TrueCondition(), Arrays.asList("actionId1", "actionId2", "actionId3")));
+        operatorStrategies.add(new OperatorStrategy("id1", ContingencyContext.specificContingency("contingencyId1"),
+                new TrueCondition(), Arrays.asList("actionId1", "actionId2", "actionId3")));
+        operatorStrategies.add(new OperatorStrategy("id2", ContingencyContext.specificContingency("contingencyId2"),
+                new AnyViolationCondition(), List.of("actionId4")));
+        operatorStrategies.add(new OperatorStrategy("id3", ContingencyContext.specificContingency("contingencyId1"),
+                new AnyViolationCondition(Collections.singleton(CURRENT)),
+                Arrays.asList("actionId1", "actionId3")));
+        operatorStrategies.add(new OperatorStrategy("id4", ContingencyContext.specificContingency("contingencyId3"),
+                new AnyViolationCondition(Collections.singleton(LOW_VOLTAGE)),
+                Arrays.asList("actionId1", "actionId2", "actionId4")));
+        operatorStrategies.add(new OperatorStrategy("id5", ContingencyContext.specificContingency("contingencyId4"),
+                new AllViolationCondition(Arrays.asList("violation1", "violation2"),
+                        Collections.singleton(HIGH_VOLTAGE)),
+                Arrays.asList("actionId1", "actionId5")));
+        operatorStrategies.add(new OperatorStrategy("id6", ContingencyContext.specificContingency("contingencyId5"),
+                new AllViolationCondition(Arrays.asList("violation1", "violation2")),
+                List.of("actionId3")));
         OperatorStrategyList operatorStrategyList = new OperatorStrategyList(operatorStrategies);
         roundTripTest(operatorStrategyList, OperatorStrategyList::write, OperatorStrategyList::read, "/OperatorStrategyFileTest.json");
     }
@@ -102,11 +120,6 @@ class JsonActionAndOperatorStrategyTest extends AbstractConverterTest {
         assertEquals("com.fasterxml.jackson.databind.JsonMappingException: for phase tap changer tap position action relative value field can't be null\n" +
                 " at [Source: (BufferedInputStream); line: 8, column: 3] (through reference chain: java.util.ArrayList[0])", assertThrows(UncheckedIOException.class, () ->
                 ActionList.readJsonInputStream(inputStream)).getMessage());
-
-        final InputStream inputStream2 = getClass().getResourceAsStream("/WrongActionFileTest2.json");
-        assertEquals("com.fasterxml.jackson.databind.JsonMappingException: for phase tap changer tap position action tapPosition field can't equal zero\n" +
-                " at [Source: (BufferedInputStream); line: 8, column: 3] (through reference chain: java.util.ArrayList[0])", assertThrows(UncheckedIOException.class, () ->
-                ActionList.readJsonInputStream(inputStream2)).getMessage());
 
         final InputStream inputStream3 = getClass().getResourceAsStream("/ActionFileTestWrongVersion.json");
         assertTrue(assertThrows(UncheckedIOException.class, () -> ActionList
